[gd_scene load_steps=7 format=3 uid="uid://b3c53h1ricqui"]

[ext_resource type="Script" path="res://scripts/environment/ladder.gd" id="1_ysvyn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3ftt"]
size = Vector2(117, 74)

[sub_resource type="CircleShape2D" id="CircleShape2D_62iex"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hc3ri"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1faxi"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_280lf"]

[node name="ladder" type="Area2D"]
script = ExtResource("1_ysvyn")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Tooltip" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="InteractionCollidetr" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_r3ftt")

[node name="FromCollider" type="CollisionShape2D" parent="."]
position = Vector2(-22, 45)
shape = SubResource("CircleShape2D_62iex")
disabled = true
debug_color = Color(0.280676, 0.622209, 0.312688, 0.42)

[node name="ToCollider" type="CollisionShape2D" parent="."]
position = Vector2(24, -48)
shape = SubResource("CircleShape2D_hc3ri")
disabled = true
debug_color = Color(0.962863, 0, 0.502095, 0.42)

[node name="MinCollider" type="CollisionShape2D" parent="."]
position = Vector2(-36, -53)
shape = SubResource("CircleShape2D_1faxi")
disabled = true
debug_color = Color(0.980594, 0, 0.378337, 0.42)

[node name="MaxCollider" type="CollisionShape2D" parent="."]
position = Vector2(46, -54)
shape = SubResource("CircleShape2D_280lf")
disabled = true
debug_color = Color(0.966319, 0, 0.48127, 0.42)

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
